# JSONCpp

./: CMakeLists.txt  README.md
configurations/: NodeTest.cpp  arrayTest.cpp  objTest.cpp  parseTest.cpp
include/: JSON.h  JSONArray.h  JSONNode.h
src/: JSON.cpp  JSONArray.cpp  JSONNode.cpp  NodeTest.cpp
